Updated translations for Serbian (1.10 only).

--- a/po/wesnoth/sr@ijekavianlatin.po
+++ b/po/wesnoth/sr@ijekavianlatin.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-10-27 16:01+0200\n"
-"PO-Revision-Date: 2012-04-01 16:53+0200\n"
+"PO-Revision-Date: 2012-10-29 23:51+0100\n"
 "Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
 "Language: sr\n"
@@ -539,13 +539,11 @@ msgstr "Rumunski prevod"
 msgid "Russian Translation"
 msgstr "Ruski prevod"
 
-# well-spelled: Галицијански
+# well-spelled: гелски
 #. [about]
 #: data/core/about.cfg:2574
-#, fuzzy
-#| msgid "Galician Translation"
 msgid "Scottish Gaelic Translation"
-msgstr "Galicijanski prevod"
+msgstr "Škotski gelski prevod"
 
 #. [about]
 #: data/core/about.cfg:2583
