--- a/po/wesnoth/sr@ijekavian.po
+++ b/po/wesnoth/sr@ijekavian.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-10-27 16:01+0200\n"
-"PO-Revision-Date: 2012-06-24 16:50+0200\n"
+"PO-Revision-Date: 2012-10-29 23:51+0100\n"
 "Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
 "Language: sr\n"
@@ -538,13 +538,11 @@ msgstr "Румунски превод"
 msgid "Russian Translation"
 msgstr "Руски превод"
 
-# well-spelled: Галицијански
+# well-spelled: гелски
 #. [about]
 #: data/core/about.cfg:2574
-#, fuzzy
-#| msgid "Galician Translation"
 msgid "Scottish Gaelic Translation"
-msgstr "Галицијански превод"
+msgstr "Шкотски гелски превод"
 
 #. [about]
 #: data/core/about.cfg:2583
