--- a/po/wesnoth-manual/uk.po
+++ b/po/wesnoth-manual/uk.po
@@ -5,10 +5,10 @@
 # Igor Paliychuk <mansonigor@gmail.com>, 2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: 1.10\n"
-"POT-Creation-Date: 2012-09-01 18:47+0300\n"
-"PO-Revision-Date: 2012-08-25 12:28+0100\n"
-"Last-Translator: Nils Kneuper <crazy-ivanovic  AT gmx  D O  T net>\n"
+"Project-Id-Version: 1.11\n"
+"POT-Creation-Date: 2012-10-27 15:56+0300\n"
+"PO-Revision-Date: 2012-10-31 12:38+0200\n"
+"Last-Translator: Igor Paliychuk <mansonigor@gmail.com>\n"
 "Language-Team: none\n"
 "Language: uk\n"
 "MIME-Version: 1.0\n"
@@ -16,6 +16,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"X-Generator: Poedit 1.5.4\n"
 
 #. type: Attribute 'lang' of: <book>
 #: /src/wesnoth/doc/manual/manual.en.xml:6
