updated Scottish Gaelic translation

--- a/po/wesnoth-tutorial/gd.po
+++ b/po/wesnoth-tutorial/gd.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Wesnoth 1.10\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-10-27 16:01+0200\n"
-"PO-Revision-Date: 2012-10-15 12:22-0000\n"
+"PO-Revision-Date: 2012-10-31 13:11-0000\n"
 "Last-Translator: GunChleoc <fiosAIGforamnagaidhligDOTnet>\n"
 "Language-Team: Fòram na Gàidhlig http://www.foramnagaidhlig.net\n"
 "Language: gd\n"
@@ -1725,7 +1725,7 @@ msgstr ""
 "25% nas treasa. Air an latha, bidh na h-ionnsaighean aca 25% nas laige, is "
 "mothaichidh tu an diofar. Tha thu fhèin <i>dligheach</i>: nas treasa air an "
 "latha is nas laige air an oidhche. Tha na saighdearan sìthiche agad "
-"<i>neòdrach</i>, ’s e seo nach dèan àm an latha diofar sam bith dhaibh."
+"<i>neodrach</i>, ’s e seo nach dèan àm an latha diofar sam bith dhaibh."
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1246
