updated Hungarian translation

--- a/po/wesnoth-tb/hu.po
+++ b/po/wesnoth-tb/hu.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: hu-tb\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-08-12 10:25+0200\n"
-"PO-Revision-Date: 2012-01-02 16:51+0100\n"
+"POT-Creation-Date: 2012-10-27 16:01+0200\n"
+"PO-Revision-Date: 2012-11-02 17:06+0100\n"
 "Last-Translator: Kádár-Németh Krisztián <krisztian.kad@gmail.com>\n"
 "Language-Team: Hungarian <kde-l10n-hu@kde.org>\n"
 "Language: hu\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Lokalize 1.2\n"
+"X-Generator: Lokalize 1.5\n"
 
 #. [campaign]: id=Two_Brothers
 #: data/campaigns/Two_Brothers/_main.cfg:12
@@ -632,9 +632,9 @@ msgid ""
 "woods. We have faced and won through greater perils than those amateurs can "
 "offer."
 msgstr ""
-"Pah, maradjatok az úton. Lándzsásaink és íjlövészeink harcolhatnak a "
-"rengeteg mélyében is. Szembenéztünk már ennél nagyobb kihívással is és akkor "
-"is győztünk."
+"Pah, maradjatok az úton. Lándzsásaink és íjászaink harcolhatnak a rengeteg "
+"mélyében is. Szembenéztünk már ennél nagyobb kihívással is és akkor is "
+"győztünk."
 
 #. [unit]: type=Dark Adept, id=Muff Toras
 #: data/campaigns/Two_Brothers/scenarios/02_The_Chase.cfg:279
