--- a/po/wesnoth-units/hu.po
+++ b/po/wesnoth-units/hu.po
@@ -6,13 +6,13 @@
 #
 # Széll Tamás <tomi@digiflex.hu>, 2005.
 # Gabor Udvari <gabor.udvari@gmail.com>, 2008.
-# Kádár-Németh Krisztián <krisztian.kad@gmail.com>, 2008, 2009, 2010, 2011.
+# Kádár-Németh Krisztián <krisztian.kad@gmail.com>, 2008, 2009, 2010, 2011, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: hu-units_1.5\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-08-12 10:25+0200\n"
-"PO-Revision-Date: 2011-11-25 18:41+0100\n"
+"POT-Creation-Date: 2012-10-27 16:01+0200\n"
+"PO-Revision-Date: 2012-11-02 15:43+0100\n"
 "Last-Translator: Kádár-Németh Krisztián <krisztian.kad@gmail.com>\n"
 "Language-Team: Hungarian <wesnoth-hungtrans@gna.org>\n"
 "Language: hu\n"
@@ -20,7 +20,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms:  nplurals=2; plural=(n != 1);\n"
-"X-Generator: Lokalize 1.2\n"
+"X-Generator: Lokalize 1.5\n"
 "X-Poedit-Bookmarks: 232,-1,-1,-1,-1,-1,-1,-1,-1,-1\n"
 
 #. [unit_type]: id=Dwarvish Dragonguard, race=dwarf
@@ -2157,7 +2157,7 @@ msgstr ""
 #. [unit_type]: id=Bowman, race=human
 #: data/core/units/humans/Loyalist_Bowman.cfg:4
 msgid "Bowman"
-msgstr "Íjlövész"
+msgstr "Íjász"
 
 #. [unit_type]: id=Bowman, race=human
 #: data/core/units/humans/Loyalist_Bowman.cfg:20
@@ -2171,7 +2171,7 @@ msgstr ""
 "Az íjászatot már a feltalálása óta másra is használják, mint hogy vadat "
 "ejtsenek el vele, és az íjászok már időtlen idők óta nélkülözhetetlenek a "
 "háborúkban. Múltjuk gyakran ködös, a parasztok vagy favágók közül kerülnek "
-"ki. Az íjlövészek képzettek mind az íj, mind a rövid kard használatában, és "
+"ki. Az íjászok képzettek mind az íj, mind a rövid kard használatában, és "
 "nagyon gyakran látni őket a csatatéren."
 
 #. [attack]: type=blade
@@ -2504,7 +2504,7 @@ msgstr ""
 #. [unit_type]: id=Longbowman, race=human
 #: data/core/units/humans/Loyalist_Longbowman.cfg:4
 msgid "Longbowman"
-msgstr "Hosszúíj nyilas"
+msgstr "Hosszúíjász"
 
 #. [unit_type]: id=Longbowman, race=human
 #: data/core/units/humans/Loyalist_Longbowman.cfg:20
@@ -2518,9 +2518,9 @@ msgstr ""
 "A hosszú íj félelmetes fegyver, de túl bonyolult ahhoz, hogy egy kezdő íjász "
 "kezelje. Nagy erőre van szükség a megfeszítéséhez, valamint a megnövelt "
 "hatótávolság és erő, amit magában rejt, teljesen haszontalan addig, amíg "
-"kezelője nem tud jól célozni. A hosszúíj nyilasok fegyverüket büszkén "
-"viselik, és a legtöbb íjlövész alig várja a napot, hogy maga is egy ilyen "
-"becses eszközt használhasson."
+"kezelője nem tud jól célozni. A hosszúíjászok fegyverüket büszkén viselik, "
+"és a legtöbb íjász alig várja a napot, hogy maga is egy ilyen becses eszközt "
+"használhasson."
 
 #. [unit_type]: id=Master Bowman, race=human
 #: data/core/units/humans/Loyalist_Master_Bowman.cfg:4
