--- a/po/wesnoth-tsg/hu.po
+++ b/po/wesnoth-tsg/hu.po
@@ -1,22 +1,22 @@
 # translation of hu-tsg_1.5.po to Hungarian
 # Udvari Zsolt <udvzsolt@gmail.com>, 2007.
 # Pintér Csaba <piere-d-siorac@freemail.hu>, 2008.
-# Kádár-Németh Krisztián <krisztian.kad@gmail.com>, 2008, 2009.
+# Kádár-Németh Krisztián <krisztian.kad@gmail.com>, 2008, 2009, 2012.
 # Gábor Udvari <gabor.udvari@gmail.com>, 2011.
 msgid ""
 msgstr ""
 "Project-Id-Version: hu-tsg_1.5\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-08-18 09:41+0200\n"
-"PO-Revision-Date: 2011-12-11 22:13+0100\n"
-"Last-Translator: Gábor Udvari <gabor.udvari@gmail.com>\n"
+"PO-Revision-Date: 2012-11-02 17:09+0100\n"
+"Last-Translator: Kádár-Németh Krisztián <krisztian.kad@gmail.com>\n"
 "Language-Team: Hungarian <kde-l10n-hu@kde.org>\n"
 "Language: hu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms:  nplurals=2; plural=(n != 1);\n"
-"X-Generator: Lokalize 1.2\n"
+"X-Generator: Lokalize 1.5\n"
 
 #. [campaign]: id=The_South_Guard
 #: data/campaigns/The_South_Guard/_main.cfg:9
@@ -526,8 +526,8 @@ msgid ""
 "Aleron is a Longbowman, stronger and better trained than regular bowmen. His "
 "arrows are deadly to enemies without a ranged attack."
 msgstr ""
-"Aleron egy hosszúíj nyilas, erős és sokkal edzettebb, mint egy egyszerű "
-"íjlövész. A nyilai halálosak a távolra nem támadó ellenségekre!"
+"Aleron egy hosszúíjász, erős és sokkal edzettebb, mint egy egyszerű íjász. A "
+"nyilai halálosak a távolra nem támadó ellenségekre!"
 
 #. [message]: speaker=Aleron
 #: data/campaigns/The_South_Guard/scenarios/01_Born_to_the_Banner.cfg:538
