--- a/po/wesnoth-utbs/pl.po
+++ b/po/wesnoth-utbs/pl.po
@@ -3,16 +3,15 @@ msgstr ""
 "Project-Id-Version: pl\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-10-27 15:56+0200\n"
-"PO-Revision-Date: 2012-01-21 19:58+0100\n"
+"PO-Revision-Date: 2012-11-03 10:09+0100\n"
 "Last-Translator: Zbigniew Banach <z.banach@wsisiz.edu.pl>\n"
 "Language-Team:  <z.banach@wsisiz.edu.pl>\n"
-"Language: \n"
+"Language: pl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
 "|| n%100>=20) ? 1 : 2);\n"
-"X-Poedit-Language: Polish\n"
 "X-Poedit-Bookmarks: 367,-1,-1,-1,-1,-1,-1,-1,-1,-1\n"
 "X-Poedit-Basepath: /usr/local/share/wesnoth\n"
 "X-Poedit-SourceCharset: utf-8\n"
@@ -336,19 +335,16 @@ msgstr ""
 
 #. [message]: speaker=Kaleh
 #: data/campaigns/Under_the_Burning_Suns/scenarios/01_The_Morning_After.cfg:245
-#, fuzzy
 msgid ""
 "What’s happened? Oh Eloh, the craters are everywhere, everything is gone, "
 "ruined. I can hardly recognize our village. I didn’t think it could be this "
 "bad."
 msgstr ""
-"Co się stało? Och Eloh, kratery są wszędzie, wszystko zniknęło, zostało "
-"zniszczone. Z trudem poznaję naszą wioskę. Nie sądziłem, że może być aż tak "
-"źle."
+"Co się stało? Na Eloh, wszędzie kratery, wszystko zniknęło, wszystko "
+"zniszczone. Ledwo poznaję naszą wioskę. Nie sądziłem, że może być aż tak źle."
 
 #. [message]: speaker=Nym
 #: data/campaigns/Under_the_Burning_Suns/scenarios/01_The_Morning_After.cfg:249
-#, fuzzy
 msgid ""
 "Come on, Kaleh, we have to go see if anyone is hurt or needs help. I think I "
 "hear people calling from the south. Now is not a time for fear, we must be "
@@ -357,12 +353,12 @@ msgid ""
 "bad as you think. Let’s explore the village and see who else has survived "
 "the night."
 msgstr ""
-"Dalej Kaleh, musimy zobaczyć czy nie ma rannych, którzy potrzebują naszej "
-"pomocy. Wydaje mi się, że słyszałam ludzi wołających z południa. Teraz nie "
-"ma czasu na strach, musimy być silni. W końcu jesteś siostrzeńcem Tanuila, "
-"naszego przywódcy, i musisz wziąć na siebie brzemię odpowiedzialności. Być "
-"może w świetle dnia sprawy nie będą wyglądały aż tak źle jak sądzisz. "
-"Przeszukajmy wioskę i zobaczmy kto jeszcze przeżył noc."
+"Ruszajmy, Kaleh — musimy sprawdzić, czy nie ma rannych, którzy potrzebują "
+"naszej pomocy. Wydaje mi się, że słyszałam ludzi wołających z południa. "
+"Teraz nie ma czasu na strach, musimy być silni. W końcu jesteś siostrzeńcem "
+"Tanuila, naszego przywódcy, i musisz wziąć na siebie brzemię "
+"odpowiedzialności. Być może w świetle dnia sprawy nie będą wyglądały aż tak "
+"źle, jak sądzisz. Przeszukajmy wioskę i zobaczmy, kto jeszcze przeżył noc."
 
 #. [message]: speaker=Kaleh
 #: data/campaigns/Under_the_Burning_Suns/scenarios/01_The_Morning_After.cfg:253
@@ -4612,13 +4608,13 @@ msgstr ""
 #. [message]: id=$casualty
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:1914
 msgid "Aauughh!"
-msgstr ""
+msgstr "Aauuchh!"
 
 #. [message]: id=$casualty
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:1928
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:2148
 msgid "No...!"
-msgstr ""
+msgstr "Nie...!"
 
 #. [message]: id=$casualty
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:1942
@@ -4682,7 +4678,7 @@ msgstr ""
 #. [message]: id=$casualty
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:2134
 msgid "Aaughh!"
-msgstr ""
+msgstr "Aauchh!"
 
 #. [message]: id=$casualty
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:2162
@@ -14218,7 +14214,7 @@ msgstr "Au, nie mogę się ruszyć!"
 #. [message]: speaker=narrator
 #: data/campaigns/Under_the_Burning_Suns/scenarios/12_The_Final_Confrontation.cfg:1293
 msgid "<big><b>Aaaurrgghh!!</b></big>"
-msgstr ""
+msgstr "<big><b>Aaauchh!!</b></big>"
 
 #. [message]: speaker=Kaleh
 #: data/campaigns/Under_the_Burning_Suns/scenarios/12_The_Final_Confrontation.cfg:1316
@@ -15658,7 +15654,7 @@ msgstr "Pustynna szamanka"
 #. [unit_type]: id=Desert Shaman, race=elf
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Desert_Shaman.cfg:22
 msgid "Desert Shamans focus on less violent ways to hinder the enemy."
-msgstr ""
+msgstr "Pustynne szamanki utrudniają wrogowi walkę, unikając jednak przemocy."
 
 #. [attack]: type=impact
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Desert_Shaman.cfg:38
