--- a/po/wesnoth-httt/pl.po
+++ b/po/wesnoth-httt/pl.po
@@ -3,17 +3,15 @@ msgstr ""
 "Project-Id-Version: pl\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-10-27 16:01+0200\n"
-"PO-Revision-Date: 2011-12-10 18:25+0100\n"
+"PO-Revision-Date: 2012-11-03 09:50+0100\n"
 "Last-Translator: Zbigniew Banach <z.banach@wsisiz.edu.pl>\n"
 "Language-Team:  <z.banach@wsisiz.edu.pl>\n"
-"Language: \n"
+"Language: pl_PL\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
 "|| n%100>=20) ? 1 : 2);\n"
-"X-Poedit-Language: Polish\n"
-"X-Poedit-Country: POLAND\n"
 "X-Poedit-Basepath: /usr/local/share/wesnoth\n"
 
 #. [campaign]: id=Heir_To_The_Throne
@@ -363,21 +361,15 @@ msgstr ""
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/01_The_Elves_Besieged.cfg:281
-#, fuzzy
-#| msgid ""
-#| "We will go north. Perhaps we can reach the Isle of Alduin. If we can make "
-#| "it there, surely we will be safe. Konrad, we must recruit some elves to "
-#| "help us, and then you must make it to the sign post in the north-west. I "
-#| "will protect you!"
 msgid ""
 "We will go north. Perhaps we can reach the Isle of Alduin. If we can make it "
 "there, surely we will be safe. Konrad, we must recruit some elves to help "
 "us, and then you must make it to the sign post in the northwest. I will "
 "protect you!"
 msgstr ""
-"Podążymy na północ. Być może zdołamy dotrzeć na Wyspę Alduin. Jeżeli nam się "
-"uda, to pewnością będziesz tam bezpieczny, Konradzie. Musisz teraz powołać "
-"do pomocy kilku elfów, a następnie podążyć do drogowskazu na północnym "
+"Podążymy na północ. Być może zdołamy dotrzeć na Wyspę Alduin — jeżeli nam "
+"się uda, będziemy tam bezpieczni. Konradzie, musimy powołać do pomocy kilka "
+"elfickich jednostek. Potem musisz dotrzeć do drogowskazu na północnym "
 "zachodzie. Będę cię ochraniał!"
 
 #. [message]: speaker=Konrad
