--- a/po/wesnoth/pl.po
+++ b/po/wesnoth/pl.po
@@ -8,14 +8,13 @@ msgstr ""
 "Project-Id-Version: pl\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-10-27 16:01+0200\n"
-"PO-Revision-Date: 2012-04-04 19:44+0100\n"
+"PO-Revision-Date: 2012-11-03 09:48+0100\n"
 "Last-Translator: Zbigniew Banach <z.banach@wsisiz.edu.pl>\n"
 "Language-Team:  <z.banach@wsisiz.edu.pl>\n"
-"Language: \n"
+"Language: pl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Polish\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
 "|| n%100>=20) ? 1 : 2)\n"
 "X-Poedit-Basepath: /usr/local/share/wesnoth\n"
@@ -536,10 +535,8 @@ msgstr "Tłumaczenie rosyjskie"
 
 #. [about]
 #: data/core/about.cfg:2574
-#, fuzzy
-#| msgid "Galician Translation"
 msgid "Scottish Gaelic Translation"
-msgstr "Tłumaczenie galicyjskie"
+msgstr "Tłumaczenie gaelickie szkockie"
 
 #. [about]
 #: data/core/about.cfg:2583
