--- a/po/wesnoth-tutorial/gd.po
+++ b/po/wesnoth-tutorial/gd.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: Wesnoth 1.10\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-10-27 15:56+0200\n"
-"PO-Revision-Date: 2012-10-31 13:13+0100\n"
-"Last-Translator: GunChleoc <fios@foramnagaidhlig.net>\n"
+"PO-Revision-Date: 2012-11-05 14:16-0000\n"
+"Last-Translator: GunChleoc <fiosAIGforamnagaidhligDOTnet>\n"
 "Language-Team: Fòram na Gàidhlig http://www.foramnagaidhlig.net\n"
 "Language: gd\n"
 "MIME-Version: 1.0\n"
@@ -18,7 +18,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=4; plural=(n==1 || n==11) ? 0 : (n==2 || n==12) ? 1 : "
 "(n > 2 && n < 20) ? 2 : 3;\n"
-"X-Generator: Virtaal 0.7.1\n"
+"X-Generator: Poedit 1.5.4\n"
 
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:39
 msgid ""
@@ -839,20 +839,14 @@ msgstr ""
 #. [set_menu_item]: id=skip_item
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:1131
 msgid "End Scenario"
-msgstr "Crìochnaich an cnàmh-sgeul"
+msgstr ""
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:1144
-#, fuzzy
-#| msgid ""
-#| "Do you want to keep practicing? You can complete this scenario at any "
-#| "time using the right click."
 msgid ""
 "Do you want to keep practicing? You can end this scenario at any time by "
 "using the <b>End Scenario</b> item in the context menu."
 msgstr ""
-"A bheil thu airson leantainn ort leis an cleachdadh? Faodaidh tu crìoch a "
-"chur air a’ chnàmh-sgeul le briogadh deas uair sam bith."
 
 #. [option]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:1146
@@ -1477,6 +1471,7 @@ msgid ""
 "To review the capabilities of any unit—including an enemy—hover the mouse "
 "over it, and you will see a unit summary on the right of the screen"
 msgstr ""
+"\n"
 "Gus sùil a thoirt air feartan aig aonad sam bith - a’ gabhail a-steach "
 "aonadan nàmhad - gluais an luchag os a chionn is chì thu gearr-iomradh an "
 "aonaid air taobh deas an sgrìn"
@@ -1486,7 +1481,7 @@ msgstr ""
 #, fuzzy
 #| msgid "<big>Unit Summaries</big>"
 msgid "Unit Summaries"
-msgstr "Gearr-iomradh nan aonad"
+msgstr "<big>Gearr-iomradh nan aonad</big>"
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:991
@@ -1532,7 +1527,7 @@ msgstr ""
 #, fuzzy
 #| msgid "<big>Long-distance Movement</big>"
 msgid "Long-distance Movement"
-msgstr "Gluasad fad às"
+msgstr "<big>Gluasad fad às</big>"
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1020
@@ -1547,6 +1542,7 @@ msgid ""
 "clicking on the destination. A number will indicate how many turns it will "
 "take to get there."
 msgstr ""
+"\n"
 "’S urrainn dhut òrdugh a chur air aonad gus iomadh chuairt a ghluasad ma nì "
 "tu briogadh air an aonad is air a’ cheann-uidhe. Seallaidh àireamh dhut cò "
 "mheud cuairt a bheir e an t-àite ud ruigsinn."
@@ -1764,6 +1760,7 @@ msgid ""
 "on the right. This brings up a description of the time of day, showing who "
 "has the advantage."
 msgstr ""
+"\n"
 "An dèidh a’ chòmhraidh seo, cùm an luchag os cionn an deilbh dhreach-thìre "
 "fon mheanbh-mhapa taobh deas. Nochdaidh tuairisgeul air àm an latha, a’ "
 "sealltainn cò aige a tha a’ bhuannachd."
@@ -1773,7 +1770,7 @@ msgstr ""
 #, fuzzy
 #| msgid "<big>Time of Day</big>"
 msgid "Time of Day"
-msgstr "Àm an latha"
+msgstr "<big>Àm an latha</big>"
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1249
@@ -1806,7 +1803,7 @@ msgstr ""
 #, fuzzy
 #| msgid "<big>Tracking Unused Units</big>"
 msgid "Tracking Unused Units"
-msgstr "Lorg aonadan gun chleachdadh"
+msgstr "<big>Lorg aonadan gun chleachdadh</big>"
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1263
@@ -1825,6 +1822,7 @@ msgid ""
 "accident later on. When <b>n</b> no longer selects a new unit, it’s safe to "
 "end your turn."
 msgstr ""
+"\n"
 "’S urrainn dhut dèanamh cinnteach gun do chleachd thu a h-uile saighdear "
 "agad ma bhrùthas tu air <b>n</b> gus dol bho aonad gu aonad. Ma bhrùthas tu "
 "air <b>space</b>, cuiridh tu comharra air an aonad a thagh thu gu bheil e "
@@ -1845,6 +1843,7 @@ msgid ""
 "conditions for a scenario are given under <b>Scenario Objectives</b> in the "
 "<b>Main Menu</b>)."
 msgstr ""
+"\n"
 "Sa chnàmh-sgeul seo, cha leig thu leas ach buaidh a thoirt air ceannard nan "
 "deamhan. (Chì thu na cumhachdan buaidhe airson cnàmh-sgeòil fo <b>Amasan "
 "cnàmh-sgeòil</b> sa <p>phrìomh chlàr-taice</b>)."
@@ -1854,14 +1853,14 @@ msgstr ""
 #, fuzzy
 #| msgid "<big>Victory Conditions</big>"
 msgid "Victory Conditions"
-msgstr "Cumhachan buaidhe"
+msgstr "<big>Cumhachan buaidhe</big>"
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1273
 #, fuzzy
 #| msgid "<big>Recruit the Right Unit Types</big>"
 msgid "Recruit the Right Unit Types"
-msgstr "Trus an seòrsa ceart dhe shaighdearan"
+msgstr "<big>Trus an seòrsa ceart dhe shaighdearan</big>"
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1273
@@ -1874,6 +1873,7 @@ msgid ""
 "Remember to recruit troops useful for the situation. Archers are "
 "particularly effective against Grunts, Wolf Riders and the orcish leader."
 msgstr ""
+"\n"
 "Cuimhnich gun trus thu saighdearan a bhios feumail san t-suidheachadh. Tha "
 "boghadairean as fheumaile an aghaidh Madagain, Marcaichean Madaidh is "
 "ceannard nan deamhan."
@@ -1977,7 +1977,7 @@ msgstr ""
 #, fuzzy
 #| msgid "<big>Tracking Enemy Movement</big>"
 msgid "Tracking Enemy Movement"
-msgstr "Lorgaich gluasadan an nàmhad"
+msgstr "<big>Lorgaich gluasadan an nàmhad</big>"
 
 #. [then]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1468
@@ -1992,6 +1992,7 @@ msgid ""
 "see all possible enemy moves at once with the <b>Show Enemy Moves</b> "
 "command from the <b>Actions</b> menu."
 msgstr ""
+"\n"
 "Chì thu càite an ruig nàmhaid ma ghluaiseas tu an luchag os a chionn. Chì "
 "thu a h-uile àite a ruigeas na nàimhdean leis an àithne <b>Seall gluasadan "
 "nàmhad</b> sa chlàr-taice <b>Gnìomhan</b>."
@@ -2091,8 +2092,8 @@ msgid ""
 "Delfador are characters from <i>Heir to the Throne</i>."
 msgstr ""
 "Rinn thu a’ chùis air na deamhain! ’S dòcha gu bheil thu airson iomairt air "
-"ìre fhoghlamaiche fheuchainn a-nis a leithid: <i>The South Guard</i>, <i>An "
-"Orcish Incursion</i>, <i>A Tale of Two Brothers</i> no <i>Heir to the "
+"ìre fhoghlamaiche fheuchainn a-nis a leithid: <i>The South Guard</i>, "
+"<i>Foghail nan deamhan</i>, <i>A Tale of Two Brothers</i> no <i>Heir to the "
 "Throne</i>. Chaidh <i>The South Guard</i> a dhealbhadh gu sònraichte dhan "
 "luchd-tòiseachaidh. ’S e pearsachan bho <i>Heir to the Throne</i> a th’ ann "
 "an Conall, Li’sar is Deilfeadar."
