--- a/po/wesnoth/gd.po
+++ b/po/wesnoth/gd.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: Wesnoth 1.10\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-10-27 16:01+0200\n"
-"PO-Revision-Date: 2012-10-31 13:22-0000\n"
-"Last-Translator: GunChleoc <fiosAIGforamnagaidhligDOTnet>\n"
+"PO-Revision-Date: 2012-11-04 16:39+0100\n"
+"Last-Translator: GunChleoc <fios@foramnagaidhlig.net>\n"
 "Language-Team: Fòram na Gàidhlig http://www.foramnagaidhlig.net\n"
 "Language: gd\n"
 "MIME-Version: 1.0\n"
@@ -18,7 +18,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=4; plural=(n==1 || n==11) ? 0 : (n==2 || n==12) ? 1 : "
 "(n > 2 && n < 20) ? 2 : 3;\n"
-"X-Generator: Poedit 1.5.4\n"
+"X-Generator: Virtaal 0.7.1\n"
 
 #. [advanced_preference]: type=boolean
 #: data/advanced_preferences.cfg:4
@@ -2677,7 +2677,7 @@ msgid ""
 "rare <i>liminal</i> units fight best during twilight."
 msgstr ""
 "Sabaididh aonadan <i>dligheach</i> nas fhearr air an latha is aonadan "
-"<i>coimeasgach</i> nas fhearr air an oidhche. tha aonadan <i>neodrach</i> "
+"<i>coimeasgach</i> nas fhearr air an oidhche. Tha aonadan <i>neodrach</i> "
 "coma mu dheidhinn oidhche no latha. Sabaididh na h-aonadan ainneamh "
 "<i>stairsnich</i> nas fhearr air a’ chiaradh is chamhanaich."
 
@@ -3399,7 +3399,7 @@ msgstr "Cuairt deiseil"
 #: data/themes/default.cfg:156 data/themes/dfool.cfg:167
 #: data/themes/widescreen.cfg:188
 msgid "End Scenario"
-msgstr "Cnàmh-sgeul deiseil"
+msgstr "Cnàmh-sgeul deis"
 
 #. #-#-#-#-#  wesnoth.wml.pot (PACKAGE VERSION)  #-#-#-#-#
 #. [label]: id=label-hp
@@ -6513,7 +6513,7 @@ msgstr "Aonadan dligheach: "
 
 #: src/reports.cpp:959
 msgid "Neutral units: "
-msgstr "Aonadan neòdrach: "
+msgstr "Aonadan neodrach: "
 
 #: src/reports.cpp:960
 msgid "Chaotic units: "
