--- a/po/wesnoth-tutorial/gd.po
+++ b/po/wesnoth-tutorial/gd.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Wesnoth 1.10\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-10-27 15:56+0200\n"
-"PO-Revision-Date: 2012-11-05 14:16-0000\n"
+"PO-Revision-Date: 2012-11-11 14:52-0000\n"
 "Last-Translator: GunChleoc <fiosAIGforamnagaidhligDOTnet>\n"
 "Language-Team: Fòram na Gàidhlig http://www.foramnagaidhlig.net\n"
 "Language: gd\n"
@@ -2092,7 +2092,7 @@ msgid ""
 "Delfador are characters from <i>Heir to the Throne</i>."
 msgstr ""
 "Rinn thu a’ chùis air na deamhain! ’S dòcha gu bheil thu airson iomairt air "
-"ìre fhoghlamaiche fheuchainn a-nis a leithid: <i>The South Guard</i>, "
+"ìre fhoghlamaiche fheuchainn a-nis a leithid: <i>An geàrd deasach</i>, "
 "<i>Foghail nan deamhan</i>, <i>A Tale of Two Brothers</i> no <i>Heir to the "
 "Throne</i>. Chaidh <i>The South Guard</i> a dhealbhadh gu sònraichte dhan "
 "luchd-tòiseachaidh. ’S e pearsachan bho <i>Heir to the Throne</i> a th’ ann "
