updated Russian and Scottish Gaelic translation

--- a/po/wesnoth-tutorial/gd.po
+++ b/po/wesnoth-tutorial/gd.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Wesnoth 1.10\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-10-27 16:01+0200\n"
-"PO-Revision-Date: 2012-11-11 14:52-0000\n"
+"PO-Revision-Date: 2012-11-12 15:51-0000\n"
 "Last-Translator: GunChleoc <fiosAIGforamnagaidhligDOTnet>\n"
 "Language-Team: Fòram na Gàidhlig http://www.foramnagaidhlig.net\n"
 "Language: gd\n"
@@ -869,8 +869,7 @@ msgstr ""
 "bheil an cnàmh-sgeul deiseil, ach faodaidh tu fhathast sùil a thoirt air na "
 "suidheachaidhean is staid nan saighdearan agad is nan nàimhdean a mhair beò. "
 "Tha <i>modh fuirich</i> air seo. Nuair a bhios tu deiseil, brùth air a’ "
-"phutan <i>Cnàmh-sgeul deiseil</i> gus dol dha dh’ath chnàmh-sgeul na h-"
-"iomairte."
+"phutan <i>Cnàmh-sgeul deis</i> gus dol dha dh’ath chnàmh-sgeul na h-iomairte."
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/2_Speaking.cfg:30
