--- a/po/wesnoth/ru.po
+++ b/po/wesnoth/ru.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: wesnoth.po\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-10-27 16:01+0200\n"
-"PO-Revision-Date: 2012-04-07 04:48+0400\n"
+"PO-Revision-Date: 2012-11-16 15:42+0400\n"
 "Last-Translator: Fedor Khod'kov <fkhodkov@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: ru\n"
@@ -21,7 +21,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
-"X-Generator: Emacs 24.0.94.1, po-mode 2.2+0.4\n"
+"X-Generator: Emacs 24.2.1, po-mode 2.2+0.4\n"
 "X-Poedit-SourceCharset: utf-8\n"
 "X-Poedit-Language: Russian\n"
 "X-Poedit-Country: RUSSIAN FEDERATION\n"
@@ -537,10 +537,8 @@ msgstr "Русский перевод"
 
 #. [about]
 #: data/core/about.cfg:2574
-#, fuzzy
-#| msgid "Galician Translation"
 msgid "Scottish Gaelic Translation"
-msgstr "Галисийский перевод"
+msgstr "Гаэльский перевод"
 
 #. [about]
 #: data/core/about.cfg:2583
@@ -6384,7 +6382,7 @@ msgstr "и"
 
 #: src/serialization/string_utils.cpp:318
 msgid "prefix_kibi^K"
-msgstr ""
+msgstr "Ки"
 
 #: src/serialization/string_utils.cpp:319
 msgid "prefix_kilo^k"
@@ -6420,7 +6418,7 @@ msgstr "Й"
 
 #: src/serialization/string_utils.cpp:341
 msgid "infix_binary^i"
-msgstr ""
+msgstr "и"
 
 #: src/statistics_dialog.cpp:70 src/statistics_dialog.cpp:126
 msgid "Recruits"
